@@ -1,3 +1,10 @@
+1999-01-07  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>
+
+	* gnome-support.c: Removed the saved boolean value.
+
+	* main.c (main): Uses the new client flags to decide, whether to
+ 	restore a session or not.
+
 1999-01-01  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* main.c (main): open a toplevel window if session restoration
